# pdf2md

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.3.0.md  pdf2md.spec  pyproject.toml
hooks/: hook-rapidocr.py  hook-rapidocr_onnxruntime.py
project-documents/: ImplementationPlan.md  Issues.md  Libraries.md  Requirements.md
scripts/: create_test_pdfs.py
src/pdf2md/: __init__.py  __main__.py  analyser.py  builder.py  cli.py  images.py  logging.py  ocr.py  output.py
testdata/: .gitkeep
tests/: test_analyser_images.py  test_builder.py  test_cli_integration.py  test_ocr.py  test_output.py
