[project]
name = "pdf2md"
dynamic = ["version"]
description = "Convert PDF documents to Markdown with OCR support for text and scanned PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pdf2md contributors"}
]
keywords = [
    "pdf",
    "markdown",
    "ocr",
    "conversion",
    "pymupdf",
    "rapidocr"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities"
]

dependencies = [
    "pymupdf>=1.23",
    "rapidocr-onnxruntime>=1.2",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "hatch-vcs>=0.4",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[project.urls]
Homepage = "https://github.com/pdf2md/pdf2md"
Repository = "https://github.com/pdf2md/pdf2md"
Issues = "https://github.com/pdf2md/pdf2md/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]
